# asset-manager-v0

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
src/: main.py
src/asset_manager/: storage.py
